# tech-jobs-br

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: jobs_clean.csv
notebooks/: exploratory.ipynb
src/tech_jobs_br/: cleaner.py  config.py  scraper.py  visualizer.py
