[project]
name = "tech-jobs-br"
version = "0.1.0"
description = "Análise do mercado de vagas tech remotas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "kaleido>=1.3.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[project.scripts]
scrape = "tech_jobs_br.scraper:main"
clean  = "tech_jobs_br.cleaner:main"
viz    = "tech_jobs_br.visualizer:main"

[tool.setuptools.packages.find]
where = ["src"]
